feat(core): spring boot 2.7重构